fix emoji buttons with skintones not showing with border radius

--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -3,7 +3,7 @@
 }
 
 .emoji-with-skintones {
-    border-top-right-radius: 10px;
+    border-top-right-radius: 15px;
 }
 
 .emoji-button {
